My local branch code added for future reference.